styles/sinumerikWin.less
.sinumerikPanel {
  --panel-width: 0px;
  --panel-height: 0px;
  background-color: whitesmoke;
  width: var(--panel-width);
  height: var(--panel-height);
}

.resize {
  width: 2px;
  cursor: col-resize;
  position: absolute;
  height: 100%;
}

.resize:hover {
  background-color: #cbcbcb;
}

.sinumerikPanelHeadContainer {
  display: table;
  position: absolute;
  top: 0;
  z-index: 1;
}

.toolContainer {
  position: absolute;
  bottom: 0;
}

.sinumerikPanelHead {
  display: flex;
  width: var(--panel-width);
  height: 40px;
}

.sinumerikPanelCentralContainer {
  display: table;
  position: absolute;
  top: 40px;
  border-collapse: collapse;
}

.sinumerikPanelMain {
  border: #eaeaeb 2px solid;
  display: table-cell;
  overflow: hidden;
  width: calc(var(--panel-width) * 0.7);
  height: calc((var(--panel-height) - 40px) * 0.8);
  max-height: calc((var(--panel-height) - 40px) * 0.8);
}

.sinumerikPanelRight {
  border: #eaeaeb 2px solid;
  display: table-cell;
  width: calc(var(--panel-width) * 0.3);
  height: calc((var(--panel-height) - 40px) * 0.8);
}

.sinumerikPanelFootContainer {
  display: table;
  position: absolute;
  bottom: 0;
}

.sinumerikPanelFoot {
  display: table-cell;
  width: var(--panel-width);
  height: calc((var(--panel-height) - 40px) * 0.2);
}

.sinumerikPanelHeadButton {
  margin-left: 5px;
  background-color: white;
  border: gainsboro 2px solid;
  height: 40px;
  width: 80px;
  transition-duration: 0.2s;
}

.sinumerikPanelHeadButton:hover {
  background-color: gainsboro;
}


.sinumerikPanelHeadButtonSelect {
  margin-left: 5px;
  background-color: gainsboro;
  border: gainsboro 2px solid;
  height: 40px;
  width: 80px;
  transition-duration: 0.2s;
}

.sinumerikPanelHeadButtonSelect:hover {
  background-color: darkgrey;
}

.sinumerikSingleLineDebugFoot {
  display: flex;
  position: absolute;
}

.sinumerikSingleLineDebugMain {
  position: absolute;
}

.sinumerikContourEditMain {
  position: absolute;
  top: 0;
  left: 0;
  width: 80%;
  height: 100%;
}

.sinumerikContourEditRight {
  position: absolute;
  top: 0;
  right: 0;
  width: 20%;
  height: 100%;
  background-color: #eaeaeb;
  border: gainsboro solid 2px;
  border-left: 0;
  display: flex;
  flex-direction: column;
}

.sinumerikFootButton {
  background-color: white;
  border: gainsboro 2px solid;
  height: 40px;
  width: 60px;
  transition-duration: 0.2s;
  margin-left: 5px;
  margin-top: 6px;
}

.sinumerikFootButton:hover {
  background-color: gainsboro;
}

.sinumerikMachineManagerHead {
  font-weight: bold;
  border-bottom: #eaeaeb 2px solid;
  text-align: center;
  margin-bottom: 3px;
}

.sinumerikSelect {
  border: #eaeaeb 2px solid;
  text-align: center;
  margin: 3px;
}

.sinumerikInputDiv {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.sinumerikInput {
  margin: 5px;
}

.sinumerikInput_error {
  color: red;
}

.sinumerikInput_errorMessage {
  position: absolute;
  bottom: -7px;
  left: 12px;
  right: 12px;
  margin: 0 auto;
  color: red;
  text-align: center;
  background-color: white;
  border: black 1px solid;
  font-size: 10px;
}


.sinumerikDiv {
  margin: 5px;
}

.sinumerikBorderDiv {
  border: gainsboro 2px solid;
}

.sinumerikButton {
  margin: 5px;
  background-color: white;
  border: gainsboro 2px solid;
  transition-duration: 0.2s;
}

.sinumerikButton:enabled:hover {
  background-color: gainsboro;
}

.sinumerikButton:disabled {
  color: gainsboro;
}

.sinumerikButtonSelected {
  background-color: gainsboro;
}

.sinumerikButtonSelected:hover {
  background-color: darkgray;
}

.sinumerikCoolantInput {
  width: 50px;
  vertical-align: middle;
}

.sinumerikCheckbox {
  vertical-align: middle;
  height: 25px;
  width: 25px;
}

.sinumerikNowrap {
  white-space: nowrap;
}

.sinumerikError {
  color: brown;
  font-weight: bold;
}

.sinumerikLi {

}

.sinumerikLi:hover {
  background-color: gainsboro;
}

.sinumerikLiSelected {
  background-color: gainsboro;
}

.sinumerikLiSelected:hover {
  background-color: darkgray;
}

.defaultMachineSelected {
  box-shadow: inset 2px 2px darkgray;
}

.sinumerikCanvas {
  margin: 0;
  border: dimgray solid 2px;
  background-color: white;
}

.sinumerikErrorDiv {
  font-weight: bold;
  color: darkred;
  overflow: scroll;
  max-height: 400px;
}

.snippetsLiSelected {
  background-color: darkgray;
}

.snippetsLi {
  background-color: #eaeaeb;
}

.snipName {
  font-weight: bold;
}

.comment {
  color: #057a7d;
  font-style: italic;
}

.snipFormBody {
  background-color: white;
  font-weight: bold;
  font-size: 1.5em;
}

.contourEditCanvas {
  height: 100%;
  width: 100%;
  background-color: white;
  border: gainsboro solid 2px;
}


.contourEditPlaneButton {
  background-color: #e7e7e7;
  border: #b6b5b5 2px solid;
  margin: 2px;
}

.contourEditPlaneButton:hover {
  background-color: #b6b5b5;
}


.contourEditPlaneButtonSelected {
  background-color: #888888;
}

.contourEditPlaneButtonSelected:hover {
  background-color: #b6b5b5;
}

.contourEditContainer {
  border: #b6b5b5 2px solid;
  margin: 2px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.contourEditContainer_visible {
  border: #b6b5b5 2px solid;
  margin: 2px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.contourEditContainerHeader {
  background-color: #e7e7e7;
  border-bottom: #b6b5b5 2px solid;
  font-weight: bold;
  text-align: center;
  width: 100%;
}

.contourEditContainerHeader:hover {
  background-color: #cccccc;
}

.d_none {
  display: none
}

.contourEditButton {
  background-color: #e7e7e7;
  border: #b6b5b5 2px solid;
  border-radius: 5px;
  margin: 7px 3px 4px;
}

.contourEditButton:disabled {
  color: #b6b5b5;
  text-shadow: 0 0 2px #b6b5b5;
}

.contourEditButton:hover:not(:disabled):not(:active) {
  box-shadow: 2px 2px 3px black;
}

.contourEditButton:active {
  box-shadow: inset 1px 1px 2px black;
}

.contourEditInput {
  margin: 5px auto;
  padding-top: 5px;
  position: relative;
}
/* ... */

